# grit

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
examples/alert_rules/alert_group/: __init__.py  alert_rule.py
src/grit/: __init__.py  __main__.py  alert_file_based_provisioning.py  alert_rules_builder.py  alert_rules_group.py  dashboard.py  output.py  timeseries.py  utilities.py
